[package]
name = "henon-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.6"
log = "0.4.27"
env_logger = "0.11.8"
indicatif = "0.18.0"
clap = "4.5"
timeit = "0.1.2"
humantime = "2.2"
fast_image_resize = "5.2.1"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
